--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@uploadthing/react": "^7.0.2",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -21,9 +23,11 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
